@@ -1,6 +1,9 @@
 Changes since labca_3_4:
 Changes since labca_3_3:
 	2012/01/12 (TS):
+	- matlab/lcaSetMonitor.c, matlab/lcaNewMonitorWait.c,
+	  matlab/lcaNewMonitorValue.c: removed unused 'i' variable.
+	- matlab/Makefile: enable warnings for MEX compiler (linux).
 	- testing/Makefile: always build lcaTest.m (even under scilab) so that
 	  it is present for distribution.
 	- ReleaseNotes: updated.
